<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">
    <item android:id="@+id/menu_ordering"
          android:title="@string/menu_ordering"
          android:orderInCategory="1"
          app:showAsAction="ifRoom">
        <menu>
            <group android:checkableBehavior="single">
                <item android:id="@+id/order_popular"
                      android:title="@string/order_popular" />
                <item android:id="@+id/order_top_rated"
                      android:title="@string/order_top_rated" />
                <item android:id="@+id/order_favourite"
                    android:title="@string/order_favourite" />
            </group>
        </menu>
    </item>
</menu>